--- a/style.css
+++ b/style.css
@@ -87,59 +87,11 @@ svg {
   font-size: 14px;
 }
 .live {
-  background: -webkit-radial-gradient(
-      32% 106%,
-      circle cover,
-      rgb(255, 225, 125) 0%,
-      rgb(255, 205, 105) 10%,
-      rgb(250, 145, 55) 28%,
-      rgb(235, 65, 65) 42%,
-      transparent 82%
-    ),
-    -webkit-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
-  background: -moz-radial-gradient(
-      32% 106%,
-      circle cover,
-      rgb(255, 225, 125) 0%,
-      rgb(255, 205, 105) 10%,
-      rgb(250, 145, 55) 28%,
-      rgb(235, 65, 65) 42%,
-      transparent 82%
-    ),
-    -moz-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
-  background: -ms-radial-gradient(
-      32% 106%,
-      circle cover,
-      rgb(255, 225, 125) 0%,
-      rgb(255, 205, 105) 10%,
-      rgb(250, 145, 55) 28%,
-      rgb(235, 65, 65) 42%,
-      transparent 82%
-    ),
-    -ms-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
-  background: -o-radial-gradient(
-      32% 106%,
-      circle cover,
-      rgb(255, 225, 125) 0%,
-      rgb(255, 205, 105) 10%,
-      rgb(250, 145, 55) 28%,
-      rgb(235, 65, 65) 42%,
-      transparent 82%
-    ),
-    -o-linear-gradient(-45deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
-  background: radial-gradient(
-      circle farthest-corner at 32% 106%,
-      rgb(255, 225, 125) 0%,
-      rgb(255, 205, 105) 10%,
-      rgb(250, 145, 55) 28%,
-      rgb(235, 65, 65) 42%,
-      transparent 82%
-    ),
-    linear-gradient(135deg, rgb(35, 75, 215) 12%, rgb(195, 60, 190) 58%);
-
+  background: linear-gradient(
+145deg,#c40092 0%,#e40031 100%);
   font-size: 10px;
   padding: 0 2px 0 2px;
-  border-radius: 5px;
+  border-radius: 4px;
   margin-bottom: 20px !important;
   
 
