--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 input:focus {
   outline: none !important;
 }
+.badge{
+  border-radius: 100% !important;
+  padding: 2px 3px 2px 3px !important;
+  margin-top: 5px !important;
+}
 a {
   text-decoration: none;
 }
@@ -93,6 +98,6 @@ svg {
   padding: 0 4px 0 4px;
   border-radius: 4px;
   margin-bottom: 20px !important;
-  
+
 
 }
